--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -1608,20 +1608,56 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                         <rect key="frame" x="0.0" y="0.0" width="600" height="472"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="awF-Zs-E6z">
+                                <rect key="frame" x="20" y="0.0" width="560" height="44"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Event name filter " translatesAutoresizingMaskIntoConstraints="NO" id="vRp-Sf-BPF">
+                                        <rect key="frame" x="40" y="0.0" width="520" height="44"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cpV-hU-TWA">
+                                        <rect key="frame" x="0.0" y="6" width="32" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="FS8-j1-hOh"/>
+                                            <constraint firstAttribute="width" constant="32" id="hyf-72-XVu"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.14901960780000001" green="0.59607843140000005" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Button" image="imgPause"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="vRp-Sf-BPF" secondAttribute="bottom" id="7GP-S1-DpA"/>
+                                    <constraint firstItem="vRp-Sf-BPF" firstAttribute="top" secondItem="awF-Zs-E6z" secondAttribute="top" id="A5P-ON-Y9c"/>
+                                    <constraint firstAttribute="height" constant="44" id="JSZ-u3-uCr"/>
+                                    <constraint firstItem="cpV-hU-TWA" firstAttribute="top" secondItem="awF-Zs-E6z" secondAttribute="top" constant="8" id="agx-7t-ysm"/>
+                                    <constraint firstAttribute="trailing" secondItem="vRp-Sf-BPF" secondAttribute="trailing" id="cDX-da-hhL"/>
+                                    <constraint firstItem="vRp-Sf-BPF" firstAttribute="leading" secondItem="cpV-hU-TWA" secondAttribute="trailing" constant="8" id="j9e-eU-iZ1"/>
+                                    <constraint firstItem="cpV-hU-TWA" firstAttribute="centerY" secondItem="awF-Zs-E6z" secondAttribute="centerY" id="qnx-qy-DxL"/>
+                                    <constraint firstItem="cpV-hU-TWA" firstAttribute="leading" secondItem="awF-Zs-E6z" secondAttribute="leading" id="yfv-Fe-Os7"/>
+                                    <constraint firstItem="vRp-Sf-BPF" firstAttribute="leading" secondItem="awF-Zs-E6z" secondAttribute="leading" constant="64" id="yjI-4E-vP2"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="agx-7t-ysm"/>
+                                        <exclude reference="yjI-4E-vP2"/>
+                                    </mask>
+                                </variation>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelectionDuringEditing="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="48" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iee-Fl-d7y" userLabel="DeviceEventsTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="472"/>
+                                <rect key="frame" x="20" y="44" width="560" height="428"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="eventCell" rowHeight="105" id="UHz-MM-BR6" userLabel="eventCell" customClass="DeviceEventTableViewCell" customModule="Particle" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="105"/>
+                                        <rect key="frame" x="0.0" y="28" width="560" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UHz-MM-BR6" id="yrE-E9-Zdt">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="105"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zo6-gM-TTE">
-                                                    <rect key="frame" x="8" y="8" width="584" height="89"/>
+                                                    <rect key="frame" x="8" y="8" width="544" height="89"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OTG-Li-XMh">
                                                             <rect key="frame" x="4" y="4" width="43" height="15"/>
@@ -1660,7 +1696,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2rP-b0-5xp" userLabel="copyEventButton">
-                                                            <rect key="frame" x="556" y="4" width="24" height="24"/>
+                                                            <rect key="frame" x="516" y="4" width="24" height="24"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="24" id="GTm-fJ-Yqp"/>
                                                                 <constraint firstAttribute="width" constant="24" id="coY-Kg-B0m"/>
@@ -1727,27 +1763,39 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                     <outlet property="delegate" destination="syL-62-7a7" id="53y-zk-0iz"/>
                                 </connections>
                             </tableView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(No events)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6e-1K-ahG">
-                                <rect key="frame" x="230" y="223" width="140" height="26"/>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(No events)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6e-1K-ahG">
+                                <rect key="frame" x="230" y="224" width="140" height="25"/>
                                 <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="24"/>
                                 <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="shadowOffset" width="0.0" height="2"/>
+                                <size key="shadowOffset" width="0.0" height="1"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="iee-Fl-d7y" firstAttribute="top" secondItem="3wb-Kf-aZU" secondAttribute="bottom" id="0dQ-qe-yHD"/>
+                            <constraint firstItem="iee-Fl-d7y" firstAttribute="top" secondItem="3wb-Kf-aZU" secondAttribute="bottom" constant="32" id="0dQ-qe-yHD"/>
+                            <constraint firstItem="iee-Fl-d7y" firstAttribute="top" secondItem="awF-Zs-E6z" secondAttribute="bottom" id="5Hl-lh-IgB"/>
                             <constraint firstItem="F6e-1K-ahG" firstAttribute="centerY" secondItem="v2v-vy-LHY" secondAttribute="centerY" id="8dL-vP-ZNk"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="iee-Fl-d7y" secondAttribute="trailing" constant="-20" id="Whg-Hr-GPq"/>
-                            <constraint firstItem="iee-Fl-d7y" firstAttribute="leading" secondItem="v2v-vy-LHY" secondAttribute="leadingMargin" constant="-20" id="X7O-eD-odo"/>
+                            <constraint firstItem="awF-Zs-E6z" firstAttribute="leading" secondItem="v2v-vy-LHY" secondAttribute="leadingMargin" id="QS3-kZ-I8E"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="awF-Zs-E6z" secondAttribute="trailing" id="ROd-aT-M38"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iee-Fl-d7y" secondAttribute="trailing" id="Whg-Hr-GPq"/>
+                            <constraint firstItem="iee-Fl-d7y" firstAttribute="leading" secondItem="v2v-vy-LHY" secondAttribute="leadingMargin" id="X7O-eD-odo"/>
+                            <constraint firstItem="iee-Fl-d7y" firstAttribute="top" secondItem="awF-Zs-E6z" secondAttribute="bottom" id="evp-l9-yzC"/>
                             <constraint firstItem="rnv-7X-v9C" firstAttribute="top" secondItem="iee-Fl-d7y" secondAttribute="bottom" id="h34-A7-TIe"/>
+                            <constraint firstItem="awF-Zs-E6z" firstAttribute="top" secondItem="3wb-Kf-aZU" secondAttribute="bottom" id="h3J-JI-H5o"/>
                             <constraint firstItem="F6e-1K-ahG" firstAttribute="centerX" secondItem="v2v-vy-LHY" secondAttribute="centerX" id="tD9-Og-ZHa"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0dQ-qe-yHD"/>
+                                <exclude reference="evp-l9-yzC"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="deviceEventsTableView" destination="iee-Fl-d7y" id="aYY-co-0fd"/>
+                        <outlet property="noEventsLabel" destination="F6e-1K-ahG" id="igB-YR-qLV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AVl-B5-uER" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2028,6 +2076,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
         <image name="imgCopyToClipboard" width="600" height="600"/>
         <image name="imgDeviceFamily" width="424" height="383"/>
         <image name="imgDeviceUnknown" width="200" height="376"/>
+        <image name="imgPause" width="256" height="256"/>
         <image name="imgPlus" width="256" height="256"/>
         <image name="imgPointAtD7" width="37" height="288"/>
         <image name="imgThreeDots" width="600" height="600"/>
